--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8081
 
 
 ### WEB CLIENT
-externData.url.base=https://simple-scala-api.herokuapp.com
-externData.url.sufix=api
+data.url.base=https://simple-scala-api.herokuapp.com
+data.url.sufix=api
 
 
 ### DATASOURCE
