--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,15 @@
     "name": "data.url.sufix",
     "type": "java.lang.String",
     "description": "A description for 'data.url.sufix'"
+  },
+  {
+    "name": "log.webclient",
+    "type": "java.lang.String",
+    "description": "A description for 'log.webclient'"
+  },
+  {
+    "name": "log.r2dbc",
+    "type": "java.lang.String",
+    "description": "A description for 'log.r2dbc'"
   }
 ]}
