--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.r2dbc.password=postgres
 
 
 ### LOGGING
-log.webclient=off
+log.reactor=off
 log.r2dbc=off
 
 logging.level.io.github.rdrmic.mop.testassignment=trace
