--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,12 @@
 	<version>0.0.1</version>
 	<packaging>${project.packaging}</packaging>
 	<name>mop-test-assignment</name>
-	<description>Test assignment for MoP</description>
 	
 	<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.6.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     
 	<properties>
