--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
 	            <directory>src/main/resources</directory>
 	            <filtering>true</filtering>
 	        </resource>
+			<resource>
+				<directory>src/main/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
 	    </resources>
 	</build>
 
